--- a/Code/Windows/Cities/CityEditWindow.xaml
+++ b/Code/Windows/Cities/CityEditWindow.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="WpfBDLab2.Windows.Cities.CityAddWindow"
-        x:Name="CityAddWindowParam"
+﻿<Window x:Class="WpfBDLab2.Windows.Cities.CityEditWindow"
+        x:Name="CityEditWindow1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfBDLab2.Windows.Cities"
-        xmlns:cities="clr-namespace:WpfBDLab2.VM.Forms.Cities"
         mc:Ignorable="d"
-        Title="CityAddWindow" Height="450" Width="800" >
+        Title="CityEditWindow" Height="450" Width="800">
     <Window.FontSize>20</Window.FontSize>
     <Grid>
         <Grid.RowDefinitions>
@@ -26,12 +25,12 @@
         </Grid.ColumnDefinitions>
 
         <TextBlock Text="Id:" TextAlignment="Center" Grid.Column="1" Grid.Row="1"/>
-        <TextBlock Text="Автоинкрементация" TextAlignment="Center" Grid.ColumnSpan="2" Grid.Column="2" Grid.Row="1" />
+        <TextBlock Text="{Binding Id}" TextAlignment="Center" Grid.ColumnSpan="2" Grid.Column="2" Grid.Row="1" />
 
         <TextBlock Text="City name:" TextAlignment="Center" Grid.Column="1" Grid.Row="2"/>
         <TextBox Text="{Binding Name}" TextAlignment="Center" Grid.ColumnSpan="2" Grid.Column="2" Grid.Row="2" />
 
-        <Button Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=CityAddWindowParam}" Content="Добавить" Grid.Column="1" Grid.Row="4" Margin="20"></Button>
-        <Button Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=CityAddWindowParam}" Content="Отмена" Grid.Column="3" Grid.Row="4" Margin="20"></Button>
+        <Button Command="{Binding EditCommand}" CommandParameter="{Binding ElementName=CityEditWindow1}" Content="Изменить" Grid.Column="1" Grid.Row="4" Margin="20"></Button>
+        <Button Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=CityEditWindow1}" Content="Отмена" Grid.Column="3" Grid.Row="4" Margin="20"></Button>
     </Grid>
 </Window>
