--- a/Code/Windows/Authors/AuthorWindow.xaml
+++ b/Code/Windows/Authors/AuthorWindow.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="WpfBDLab2.Windows.CitiesWindow"
+﻿<Window x:Class="WpfBDLab2.Windows.Authors.AuthorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfBDLab2.Windows"
+        xmlns:local="clr-namespace:WpfBDLab2.Windows.Authors"
         xmlns:forms="clr-namespace:WpfBDLab2.VM.Forms"
+        xmlns:authors="clr-namespace:WpfBDLab2.VM.Forms.Authors"
         mc:Ignorable="d"
-        Title="CitiesWindow" Height="450" Width="800">
+        Title="AuthorWindow" Height="450" Width="800">
+
     <Window.DataContext>
-        <forms:CitiesFormVM></forms:CitiesFormVM>
+        <authors:AuthorsFormVM></authors:AuthorsFormVM>
     </Window.DataContext>
     <Window.FontSize>20</Window.FontSize>
     <Grid>
