--- a/Code/Windows/Faculties/FacsWindow.xaml
+++ b/Code/Windows/Faculties/FacsWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="WpfBDLab2.Windows.CitiesWindow"
+﻿<Window x:Class="WpfBDLab2.Windows.Faculties.FacsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfBDLab2.Windows"
-        xmlns:forms="clr-namespace:WpfBDLab2.VM.Forms"
+        xmlns:local="clr-namespace:WpfBDLab2.Windows.Faculties"
+        xmlns:faculties="clr-namespace:WpfBDLab2.VM.Forms.Faculties"
         mc:Ignorable="d"
-        Title="CitiesWindow" Height="450" Width="800">
+        Title="FacsWindow" Height="450" Width="800">
     <Window.DataContext>
-        <forms:CitiesFormVM></forms:CitiesFormVM>
+        <faculties:FacFormVM></faculties:FacFormVM>
     </Window.DataContext>
     <Window.FontSize>20</Window.FontSize>
     <Grid>
