--- a/Code/Windows/Specs/SpecsWindow.xaml
+++ b/Code/Windows/Specs/SpecsWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="WpfBDLab2.Windows.CitiesWindow"
+﻿<Window x:Class="WpfBDLab2.Windows.Specs.SpecsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfBDLab2.Windows"
-        xmlns:forms="clr-namespace:WpfBDLab2.VM.Forms"
+        xmlns:local="clr-namespace:WpfBDLab2.Windows.Specs"
+        xmlns:specs="clr-namespace:WpfBDLab2.VM.Forms.Specs"
         mc:Ignorable="d"
-        Title="CitiesWindow" Height="450" Width="800">
+        Title="SpecsWindow" Height="450" Width="800">
     <Window.DataContext>
-        <forms:CitiesFormVM></forms:CitiesFormVM>
+        <specs:SpecsFormVM></specs:SpecsFormVM>
     </Window.DataContext>
     <Window.FontSize>20</Window.FontSize>
     <Grid>
